# rag_helper_documentation

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
chains/: retrieval.py  scratch_evaluator.py
indexing/: create_index.py  indexing.py
tools/: contants.py
